@@ -6,11 +6,12 @@ import lombok.RequiredArgsConstructor;
 import aeroline.nr.api.api.Dto.UserCreateDto;
 import aeroline.nr.api.api.Dto.UserDto;
 import aeroline.nr.api.api.Dto.UserMapper;
+import aeroline.nr.api.api.Dto.UserUpdateDto;
 import aeroline.nr.api.entities.User;
-import org.springframework.stereotype.Service;
+import aeroline.nr.api.exceptions.UserNotFoundException;
 
+import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -20,30 +21,30 @@ public class UserServiceImpl implements UserService {
     private final UserMapper mapper;
 
     @Override
-    public UserDto create(UserCreateDto dto) {
-        User user = mapper.toEntity(dto);
-        User saved = repository.save(user);
-        return mapper.toUserDto(saved);
-    }
-
-    @Override
     public UserDto getById(int id) {
         return repository.findById(id)
                 .map(mapper::toUserDto)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(UserNotFoundException::new);
     }
 
     @Override
     public List<UserDto> getAll() {
-        return repository.findAll().stream()
+        return repository.findAll()
+                .stream()
                 .map(mapper::toUserDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public UserDto update(int id, UserCreateDto dto) {
+    public UserDto create(UserCreateDto dto) {
+        User user = mapper.toEntity(dto);
+        return mapper.toUserDto(repository.save(user));
+    }
+
+    @Override
+    public UserDto update(int id, UserUpdateDto dto) {
         User user = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(UserNotFoundException::new);
 
         user.setFullname(dto.getFullname());
         user.setUsername(dto.getUsername());
@@ -56,7 +57,10 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void delete(int id) {
-        repository.deleteById(id);
+        User user = repository.findById(id)
+                .orElseThrow(UserNotFoundException::new);
+
+        repository.delete(user);
     }
 
 }
